[package]
name = "moonblokz-crypto"
version = "1.0.0"
edition = "2024"
description = "Moonblokz crypto library"
license = "MIT"
homepage = "moonblokz.com"
authors = ["Peter Sallai (Bad Access)<peter.sallai@badaccess.eu>"]
keywords = ["moonblokz", "crypto", "schnorr", "bls"]
repository = "https://github.com/petersallai/moonblokz-crypto-lib"
readme = "README.md"
categories = ["crypto"]

[dependencies]
sha2 = { version = "0.10", default-features = false,optional = true}
malachite-base = {version="0.6", default-features=false,optional = true}
malachite-nz = {version="0.6", default-features=false,optional = true,features = ["32_bit_limbs"]}
num-bigint-dig = {git="https://github.com/petersallai/num-bigint.git", default-features=false,optional = true,features = ["lazy_static"] }
num-traits = { version = "0.2", default-features = false, optional = true }
bls12_381-bls={version = "0.5", default-features = false,optional = true}
dusk-bls12_381 = { version = "0.14", default-features = false, features = ["alloc", "pairings", "zeroize"],optional = true }
dusk-bytes = { version = "0.1.7", default-features = false,optional = true }

[features]
default = ["schnorr-num-bigint-dig"]

#Internal feature, used for Schnorr based implementations
schnorr=["dep:sha2"]

#Internal feature, used for BLS based implementations
bls=[]

#Use this feature to enable Schnorr implementation based on Malachite bigint library
schnorr-malachite = ["schnorr","dep:malachite-base", "dep:malachite-nz"]

#Use this feature to enable Schnorr implementation based on a forkd version of num-bigint-dig library
schnorr-num-bigint-dig = ["schnorr","dep:num-bigint-dig","dep:num-traits"]

#Use this feature to enable BLS implementation. It is a wrapper around the bls12_381-bls library
bls-bls12_381-bls = ["bls","dep:bls12_381-bls","dep:dusk-bls12_381","dep:dusk-bytes"]